# ejdb-lua-v2

./: CMakeLists.txt  CMakeLists_linux.txt  test.lua  test.luabbb
src/: ejdb.c  ejdb_copy.c  example1.c  example1_back.c
